# flaskblog

./: .env.sample  README.md  pyproject.toml
smoothblog/: __init__.py  auth.py  blog.py  cli.py  database.py  forms.py  login_manager.py  models.py
smoothblog/static/: validate_form.js
smoothblog/templates/: base.html
smoothblog/templates/auth/: admin.html  login.html  register.html
smoothblog/templates/blog/: about.html  create.html  home.html
tests/: conftest.py  test_auth.py  test_blog.py  test_models.py  test_other.py
